--- a/src/Components/Header.module.css
+++ b/src/Components/Header.module.css
@@ -1,21 +1,23 @@
 .solidBtn {
-  background-color: rgb(0, 60, 255);
+  background: rgb(0, 54, 255);
   color: white;
   transition: all 0.3s ease;
   width: 150px;
+  height: 15px;
 }
-.solidBtn:hover {
+/* .solidBtn:hover {
   background-color: rgb(0, 54, 231);
   transition: all 0.3s ease;
   color: white;
-}
+} */
 .borderBtn {
   background-color: white;
   border: 1px solid rgb(0, 54, 255);
   transition: all 0.3s ease;
+  color: rgb(0, 54, 255);
 }
-.borderBtn:hover {
+/* .borderBtn:hover {
   background-color: rgb(0, 54, 231);
   transition: all 0.3s ease;
   color: white;
-}
+} */
