zadatak 2 profile page finished, applied posts filter by author

--- a/src/Components/UserCard/UserCard.module.css
+++ b/src/Components/UserCard/UserCard.module.css
@@ -14,3 +14,16 @@
   padding-right: 20px;
   display: inline-block;
 }
+.cardAnimation {
+  animation: cardAnimation 0.3s ease forwards;
+}
+@keyframes cardAnimation {
+  from {
+    transform: translateY(60px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
