--- a/src/Views/Posts-page/Posts.module.css
+++ b/src/Views/Posts-page/Posts.module.css
@@ -1,10 +1,13 @@
 .wrapper {
   background-color: #282c34;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   gap: 30px;
   width: 100%;
   padding: 50px;
   min-height: 100vh;
+}
+label {
+  color: white;
 }
